# calbench

./: .dockerignore  .gitignore  Dockerfile.calendar-bench  LICENSE  README.md
a2a-engine/: README.md  pyproject.toml
a2a-engine/a2a_engine/: __init__.py  _context.py  agent.py  dataset.py  experiment.py  langfuse_cache.py  parallel.py  registry.py  schemas.py  tracing.py  tracing_otel.py
a2a-engine/a2a_engine/llm/: __init__.py  api.py  factory.py  model_config.py  providers.py
a2a-engine/examples/: example_experiment.yaml
a2a-engine/scripts/: cache_langfuse.py
expt-runner/: README.md  pyproject.toml
expt-runner/expt_runner/: __init__.py  run_experiment.py
games/calendar/: README.md  pyproject.toml  run.py
games/calendar/analysis/scripts/: analyze_difficulty_buckets.py  benchmark_lite_protocol_scatter.py  index_trace_outcomes_sqlite.py  message_volume_metric.py  plot_5a3p_figures.py  rq0_token_cost_breakdown.py  rq1_privacy_leakage_prevalence.py  rq234_llm_vs_dsm_comparison.py  rq2_gepa_negotiation_policy_search.py  rq3_gepa_agent0_privacy_redteam.py  rq5_vps_privacy_metric.py  rq6_first_feasible_slot_acceptance.py  rq7_prior_meeting_reschedule_initiation.py  (+4 more)
games/calendar/calendar_game/: __init__.py  agents.py  benchmark.py  calendar.py  dataset.py  evaluate.py  fallback.py  game.py  labelgen.py  privacy.py  prompts.py  scenario.py  solver.py  taskgen.py
games/calendar/experiments/: e2e_test.yaml  example.yaml  privacy_probe_nosy_agent0_sample.yaml  redteam_c006_uniform_5a3p_c020.yaml  redteam_c006_varied_5a3p_c020.yaml  uniform_full_dsm.yaml  uniform_full_gemini31pro.yaml  varied_full_dsm.yaml  varied_full_gemini31pro.yaml
games/calendar/taskgen_configs/: calbench_72_uniform.yaml  calbench_72_varied.yaml  example_custom.yaml
games/calendar/tasks/: uniform_full.jsonl  uniform_summary.json  varied_full.jsonl  varied_summary.json
(+29 files in other folders)
