[project]
name = "a2a-engine"
version = "0.1.0"
description = "Game-agnostic framework for agent-to-agent coordination experiments."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "certifi>=2024.2.2",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "pandas>=2.0",
    "langfuse>=3.0",
    "requests>=2.31",
    "google-genai>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["a2a_engine"]
