[project]
name = "calendar-game"
version = "0.1.0"
description = "Calendar scheduling benchmark game for a2a-engine."
requires-python = ">=3.11"
dependencies = [
    "a2a-engine",
    "expt-runner",
    "ortools>=9.10",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pytest>=8.0",
    "json-repair>=0.59.4",
    "dspy>=3.2.0",
    "matplotlib>=3.10.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["calendar_game"]

[tool.uv.sources]
a2a-engine = { path = "../../a2a-engine", editable = true }
expt-runner = { path = "../../expt-runner", editable = true }
